k8s/apps/our-home/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: our-home
  labels:
    pod-security.kubernetes.io/enforce: baseline
